data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2073.wast
;; 4. **Test Description:**    A block with a nested loop where `br_if` uses an invalid condition based on uninitialized local variables.      **Constraint Checked:** Operand stack handling and context extension validity.      **Relation to Infinite Loops:** Validates the handling of blocks when faced with incorrect conditions that could cause infinite looping.

(assert_invalid
  (module
    (func $invalid_uninit_local (param i32) (result i32)
      (local i32)
      (block (result i32)
        (loop (result i32)
          (br_if 0 (local.get 1)) ;; uninitialized local variable
          (i32.const 42)
        )
      )
    )
  )
  "type mismatch"
)